--- a/Videoque/Views/Shared/_Layout.cshtml
+++ b/Videoque/Views/Shared/_Layout.cshtml
@@ -17,8 +17,6 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
+@Scripts.Render("~/bundles/lib")
+@RenderSection("scripts", required: false)</body>
 </html>
