--- a/Videoque/Views/Shared/_NavBar.cshtml
+++ b/Videoque/Views/Shared/_NavBar.cshtml
@@ -7,6 +7,7 @@
             <ul class="nav navbar-nav navbar-left">
                 <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                 <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
+                <li>@Html.ActionLink("New Rental", "New", "Rentals")</li>
             </ul>
         </div>
         @Html.Partial("_LoginPartial")
