Added Custom Bootstrap Theme

--- a/Videoque/Content/typeahead.css
+++ b/Videoque/Content/typeahead.css
@@ -1,6 +1,10 @@
-﻿﻿.typeahead {
-     background-color: #fff;
+﻿﻿.twitter-typeahead {
+     width: 300px;
  }
+
+.typeahead {
+    background-color: #fff;
+}
 
 .typeahead:focus {
     border: 2px solid #0097cf;
