--- a/Videoque/Views/Movies/List.cshtml
+++ b/Videoque/Views/Movies/List.cshtml
@@ -32,7 +32,7 @@
                 columns: [
                     {
                         data: "name",
-                        render: function (data, type, movie) {
+                        render: function(data, type, movie) {
                             return "<a href='/movies/edit/" + movie.id + "'>" + movie.name + "</a>";
                         }
                     },
@@ -41,7 +41,7 @@
                     },
                     {
                         data: "id",
-                        render: function (data) {
+                        render: function(data) {
                             return "<button class='btn-link js-delete' data-movie-id=" + data + ">Delete</button>";
                         }
                     }
@@ -62,5 +62,4 @@
                 });
             });
         });
-    </script>
-}
+    </script>}
